# mystocks

./: .FILE_OWNERSHIP  .ai-collaboration.md  .ai-progress.md  .continue-here.md  .coveragerc  .env.backup.20251019_202126  .env.example  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .gitnexusignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylint.test.rc  .pylintrc  =8.3.0  ADAPTER_ROUTING_GUIDE.md  ADAPTER_SIMPLIFICATION_ANALYSIS.md  ADAPTER_SIMPLIFICATION_COMPLETE_GUIDE.md  ADAPTER_SIMPLIFICATION_PRESENTATION.md  AGENTS.md  APIFOX_INTEGRATION_COMPLETE.md  APIFOX_MCP_SETUP.md  API列表文档.md  ARCHITECTURE_REVIEW_INDEX.md  ARCHITECTURE_VALIDATION_SUMMARY.md  ARCHITECTURE_VERIFICATION_REPORT.md  ARCHIVED.md  AUTHENTICATION_ANALYSIS_INDEX.md  AUTHENTICATION_FLOW_ANALYSIS.md  AUTHENTICATION_QUICK_REFERENCE.md  AUTHHENTICATION_TEST_CODE_REVIEW.md  AUTH_BEFORE_AFTER_COMPARISON.md  AUTH_QUICK_CHECK_CHECKLIST.md  AUTH_REVIEW_EXECUTIVE_SUMMARY.md  AUTH_REVIEW_FILES_SUMMARY.txt  AUTH_REVIEW_INDEX.md  BUG-NEW-002-FIX-COMPLETE.md  (+322 more)
.agent/: full-codebase-audit-checklist.md
.archive/: ARCHIVE_INDEX.md
.claude/: COMPLIANCE_CHECK_REPORT.md  build-checker-python.json  build-checker.json  setting.json  settings.json  skill-rules.json
.claude-trace/: log-2025-11-06-11-23-22.html  log-2025-11-06-11-23-22.jsonl
.config/: TASK.md  oh-my-opencode.noco.json  opencode-opimized.json  switch-omo-config.sh
.gemini/: GEMINI.md  settings.json
.githooks/: post-commit  pre-commit
.github/: pull_request_template.md
.governance/: active-gates.json  active-gates.md
.impeccable/: design.json
.migration/: deny-list.py
.multi-cli-tasks/: README.md  WORKTREE_EXECUTION_PLAN_2026-03-05.md
.omc/: project-memory.json
.planning/: MILESTONES.md  PHASE-01-FOLLOWUP-REVIEW-2026-04-06.md  PLANNING-DOCS-REVIEW-2026-04-06.md  PROJECT.md  REQUIREMENTS.md  ROADMAP-REVIEW-2026-04-06.md  ROADMAP.md  STATE.md  config.json
.sisyphus/: ralph-loop.local.md
.taskmaster/: CLAUDE.md  COMPLETE_EXECUTION_PLAN.md  TASKMASTER_EXECUTION_PLAN.md  TASK_PLANNING_SUMMARY.txt  config.json  state.json
02-架构与设计文档/: INDEX.md
03-API与功能文档/: INDEX.md
04-测试/: INDEX.md
06-项目管理与报告/: INDEX.md
CLIS/: README.md
adapters/: README.md  README_TDX.md  akshare_adapter.py  baostock_adapter.py  byapi_adapter.py  customer_adapter.py  financial_adapter.py  financial_adapter.py.backup  tdx_adapter.py  tdx_adapter.py.backup  test_customer_adapter.py
ai_generated_tests/: test_base_adapter_optimized.py  test_data_validator_optimized.py  test_exceptions_optimized.py
ai_test_optimizer_toolkit/: FINAL_COMPLETION_REPORT.md  README.md  health_check.py  setup.py
ai_tools/: INDEX.md
api/: INDEX.md
architecture/: DOMAIN_BOUNDARIES.md  INDEX.md  STANDARDS.md
archive/: CLEANUP_REPORT_20251020.md  INDEX.md
archived/: INDEX.md  archive_INDEX.md
backtesting/: __init__.py
benchmarks/: baseline_summary.txt
buger/: INDEX.md
calcu/: readme.md
ci-cd/: INDEX.md
cli_reports/: INDEX.md  frontend_access_issue_20260117.md
code_quality/: INDEX.md
completion_reports/: INDEX.md
conductor/: product.md  tracks.md
config/: .env.data_sources.example  .env.example  .env.simplified  .mcp.json  .pre-commit-config-security.yaml  .security.yml  DATA_SOURCES_SPLIT_PLAN.md  TDX目录规则 .md  adapter_priority_config.yaml  advanced_analysis_contract.json  ai_automation_analysis_1763426351.json  ai_automation_config.yaml  ai_strategy_analysis_result.json  ai_test_optimizer_config.json  alertmanager.yml  apache.production.conf  automation_config.yaml  bandit_report.json  cache_optimization_config.yaml  code_quality_report.json  data_governance_rules.json  data_interfaces.json  data_sources.json  data_sources_loader.py  data_sources_registry.yaml  directory-structure-report.txt  disaster_recovery_config.yaml  docker-compose.tdengine.yml  docker-compose.test.yml  ecosystem.config.js  ecosystem.playwright.p1.config.js  ecosystem.production.config.js  governance.yaml.example  grafana-dashboard-provider.yml  indicators_registry.yaml  lighthouse.config.json  lnav_formats.json  logging_config.py  logging_rotation_config.yaml  loki-config.yaml  (+36 more)
core/: __init__.py  batch_failure_strategy.py  cache_manager.py  cached_data_manager.py  config_loader.py  data_classification.py  data_manager.py  data_storage_strategy.py  datamanager_monitoring.py
data_access/: __init__.py  mysql_access.py  postgresql_access.py  redis_access.py  tdengine_access.py
data_sources/: README_TDX.md  __init__.py  baostock_importer.py  tdx_binary_parser.py  tdx_importer.py
db_manager/: JUPYTER_DEMO.ipynb  QUICK_FIX_README.md  README.md  connection_manager.py  database_manager.py  database_manager.py.backup  df2sql.py  disaster_recovery.py  init_db_monitor.py  save_realtime_market_data_offline.py  table_config.yaml  test_database_menu.py  test_simple.py  test_tdengine.py
deployment/: DEPLOYMENT_CHECKLIST.md  INDEX.md  health_check.py  mystocks-api.service  nginx-mystocks.conf  production.env.template  verify_config.py
deployments/: k8s-deployment.yaml
design/: INDEX.md
design-references/: INDEX.md
docker/: QUICK_REFERENCE.md  README.md  SECURITY_GUIDE.md  data-source-credentials.env.example  docker-compose.prod.yml  grafana.yml  mongodb.yml  monitoring-stack.yml  prometheus.yml
docs/: API_DOCUMENTATION_INDEX.md  API_INTERFACE_ALIGNMENT.md  API_QUICK_REFERENCE.md  API_TESTING_GUIDE.md  ARCHIVED.md  BUG_FIX_SESSION_20251026.md  BUG_KNOWLEDGE_BASE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_1.md  CODE_COMPLETENESS_REPORT.md  CODE_OPTIMIZATION_EXECUTION_REPORT.md  CODE_QUALITY_REVIEW_US3.md  CODE_SIZE_OPTIMIZATION_REPORT.md  COMPREHENSIVE_CLEANUP_REPORT.md  CONNECTION_LEAK_ANALYSIS.md  CONNECTION_LEAK_VERIFICATION_REPORT.md  CURRENT_STATUS.md  DATA_SOURCE_ARCHITECTURE.md  DATA_SYNC_TROUBLESHOOT.md  DIALOGUE_SUMMARY.md  DOCUMENTATION_ARCHITECTURE_OPTIMIZATION_PROPOSAL.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_STRUCTURE.md  FILE_CLEANUP_COMPLETION_REPORT.md  FILE_CLEANUP_TASK.md  FILE_ORGANIZATION_RULES.md  FINAL_COMPREHENSIVE_DELIVERY_SUMMARY.md  (+98 more)
(+19171 files in other folders)
